@@ -1,3 +1,11 @@
+1999-02-06  Mark Kettenis  <kettenis@gnu.org>
+
+	* main.c (main): Initialize status from underlying node.
+	* users.c (check_access_hook): New function.  Correctly implement
+	access permission checking.
+	(trivfs_check_access_hook): Initialize with check_access_hook.
+	(trivfs_S_file_check_access): Removed.
+	
 Thu Feb 18 00:57:30 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* devio.c (devio_assert_dtr): Bother to set open_pending.
